# ARG-Copilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  10_STRATEGIES_QUICK_REFERENCE.md  7_STEP_FRAMEWORK_EXPLAINED.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_BUG_FIX.md  DECISION_TREES_EXPLAINED.md  DECISION_TREE_SIMPLE_EXAMPLE.md  DECISION_TREE_YOUR_ACTUAL_RUN.md  DOCUMENTATION_INDEX.md  Dockerfile  FIX_SUMMARY.md  GUARDRAILS_EXPLAINED.md  INNOVATION_HIGHLIGHTS.md  LICENSE  PORTFOLIO_SETUP_GUIDE.md  PRESENTATION_SUMMARY.md  PROMPT_ENGINEERING_STRATEGIES.md  QUICK_REFERENCE_7_STEPS.md  README.md  README_BUG_FIX.md  SECURITY.md  SETUP_CHECKLIST.md  STRATEGY_EXPLANATION_FOR_PROF.md  STRUCTURE.md  SUMMARY.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  VALIDATION_SUMMARY.md  VISUAL_ARCHITECTURE.md  docker-compose.yml  example_query.txt  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_example.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  api.py  cli.py  graph.py  guards.py  llm.py
app/agents/: __init__.py  a1_sampling.py  a2_wetlab.py  a3_bioinfo.py  a4_analysis.py
app/prompts/: __init__.py  a1_sampling_system_prompt.py  a1_sampling_user_prompt.py  a2_wetlab_system_prompt.py  a2_wetlab_user_prompt.py  a3_bioinfo_system_prompt.py  a3_bioinfo_user_prompt.py  a4_analysis_system_prompt.py  a4_analysis_user_prompt.py
extra/: Data_analysis_Agent_System_Prompt.md  Data_analysis_Agent_user_Prompt.md  ENV_USAGE_GUIDE.md  FRAMEWORK_VALIDATION_REPORT.md  QUICK_START.md  README.md  Sampling Design Agent_System Prompt.md  Sampling Design Agent_User_Prompt.md  Statistical Analysis & Visualization Agent_System_Prompt.md  Statistical Analysis & Visualization Agent_User_Prompt.md  Wet-Lab Protocol Agent_System_Prompt.md  Wet-Lab Protocol Agent_User_Prompt.md  bioinformatics_Agent_System_Prompt.md  bioinformatics_Agent_User_Prompt.md  test_a1_direct.py  test_env.py  test_framework.py
